<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints"
         >

        <ImageView
            android:id="@+id/cross_btn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:padding="5dp"
            android:src="@drawable/cancle_icon"
            android:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:layout_toRightOf="@+id/cross_btn"
            android:drawablePadding="5dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="start"
            android:text="@string/setting"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_below="@+id/cross_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@+id/cross_btn"
                android:drawablePadding="5dp"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/poppins_reguler"
                android:gravity="start"
                android:text="@string/signed_as"
                android:textColor="@color/txt_gray"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="20dp"
                android:layout_toRightOf="@+id/cross_btn"
                android:drawablePadding="5dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="start"
                android:text="jennifer.washington@mail.com"
                android:textColor="@color/black"
                android:textSize="14sp" />




            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/create_btn_color"/>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_toRightOf="@+id/cross_btn"
                android:drawablePadding="5dp"
                android:fontFamily="@font/poppins_reguler"
                android:gravity="start"
                android:text="@string/general"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@+id/cross_btn"
                android:drawablePadding="5dp"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/poppins_reguler"
                android:gravity="start"
                android:text="@string/reminders"
                android:textColor="@color/black"
                android:textSize="14sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@+id/cross_btn"
                android:drawablePadding="5dp"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/poppins_reguler"
                android:gravity="start"
                android:text="@string/notifications"
                android:textColor="@color/black"
                android:textSize="14sp" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_toRightOf="@+id/cross_btn"
                android:drawablePadding="5dp"
                android:fontFamily="@font/poppins_reguler"
                android:gravity="start"
                android:text="@string/subscription"
                android:textColor="@color/black"
                android:textSize="14sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_toRightOf="@+id/cross_btn"
                android:drawablePadding="5dp"
                android:fontFamily="@font/poppins_reguler"
                android:gravity="start"
                android:text="@string/siri_shortcuts"
                android:textColor="@color/black"
                android:textSize="14sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/create_btn_color"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@+id/cross_btn"
                android:drawablePadding="5dp"
                android:fontFamily="@font/poppins_reguler"
                android:gravity="start"
                android:text="@string/about_app"
                android:textColor="@color/black"
                android:textSize="14sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@+id/cross_btn"
                android:drawablePadding="5dp"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/poppins_reguler"
                android:gravity="start"
                android:text="@string/help_support"
                android:textColor="@color/black"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/sign_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_toRightOf="@+id/cross_btn"
                android:drawablePadding="5dp"
                android:fontFamily="@font/poppins_reguler"
                android:gravity="start"
                android:text="@string/sign_out"
                android:textColor="@color/sign_out_color"
                android:textSize="14sp" />




        </LinearLayout>



    </RelativeLayout>








</androidx.constraintlayout.widget.ConstraintLayout>