<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.Welcome">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-46dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">


            <TextView
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:drawableStart="@drawable/back_icon_black"
                android:drawablePadding="5dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="start"
                android:text="@string/back"
                android:textColor="@color/black"
                android:textSize="14sp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="40dp">

                <TextView
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:gravity="start"
                    android:text="@string/log_in"
                    android:textColor="@color/blue"
                    android:textSize="18sp" />


                <TextView
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="30dp"
                    android:layout_toRightOf="@+id/login"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:gravity="start"
                    android:text="@string/register"
                    android:textColor="@color/txt_gray"
                    android:textSize="18sp" />


                <View
                    android:id="@+id/v1"
                    android:layout_width="60dp"
                    android:layout_height="1dp"
                    android:layout_below="@+id/login"
                    android:layout_marginTop="4dp"
                    android:background="@color/blue" />

                <View
                    android:id="@+id/v2"
                    android:layout_width="80dp"
                    android:layout_height="1dp"
                    android:layout_below="@+id/register"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="4dp"
                    android:layout_toRightOf="@+id/login"
                    android:background="@color/txt_gray" />


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp">

                <TextView
                    android:id="@+id/email_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/email_address"
                    android:textColor="@color/txt_gray"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/email_ed"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:hint="@string/email_address"
                    android:singleLine="true"
                    android:textSize="14sp"
                    android:inputType="textEmailAddress"
                    android:text=""
                    android:gravity="bottom"
                    android:background="@android:color/transparent"
                    android:textColorHint="@color/txt_gray"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_reguler"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/txt_gray"/>

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp">

                <TextView
                    android:id="@+id/pass_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/password"
                    android:textColor="@color/txt_gray"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/password_ed"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:hint="@string/password"
                    android:singleLine="true"
                    android:textSize="14sp"
                    android:inputType="textPassword"
                    android:textColorHint="@color/txt_gray"
                    android:textColor="@color/black"
                    android:text=""
                    android:background="@android:color/transparent"
                    android:gravity="bottom"
                    android:fontFamily="@font/poppins_reguler"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/txt_gray"/>
            </LinearLayout>



            <LinearLayout
                android:id="@+id/confirm_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                android:layout_marginTop="30dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp">

                <TextView
                    android:id="@+id/confirm_pass_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/confirm_password"
                    android:textColor="@color/txt_gray"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/confirm_password_ed"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:hint="@string/confirm_password"
                    android:singleLine="true"
                    android:textSize="14sp"
                    android:inputType="textPassword"
                    android:textColorHint="@color/txt_gray"
                    android:textColor="@color/black"
                    android:text=""
                    android:background="@android:color/transparent"
                    android:gravity="bottom"
                    android:fontFamily="@font/poppins_reguler"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/txt_gray"/>
            </LinearLayout>






            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="start"
                android:text="@string/forgot_password"
                android:textColor="@color/blue"
                android:textSize="15sp" />


            <TextView

                android:id="@+id/login_register_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="42dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="42dp"
                android:background="@drawable/btn_unselected_background"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/Login"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:visibility="visible" />





            <TextView
                android:id="@+id/by_click"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_reguler"
                android:gravity="center_horizontal"
                android:text="@string/by_click"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center_horizontal"
                android:text="@string/terms"
                android:textColor="@color/blue"
                android:textSize="13sp"
                android:visibility="gone"/>



        </LinearLayout>


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>