<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    tools:context=".activity.Welcome">

    <LinearLayout
        android:id="@+id/top"
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".45"
            android:orientation="vertical"
            android:gravity="bottom">

            <ImageView
                android:id="@+id/SplashScreenImage"
                android:layout_width="130dp"
                android:layout_height="200dp"
                android:src="@drawable/welcome_icon"
                android:layout_gravity="start" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".55"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textColor="@color/button_color"
                android:textSize="30sp"
                android:gravity="start"
                android:fontFamily="@font/poppins_semi_bold"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="40dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lets_help"
                android:textColor="@color/txt_gray"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_reguler"
                android:layout_gravity="start"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="90dp"
                />


            <TextView
                android:id="@+id/start"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:text="@string/start"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:gravity="center"
                android:background="@drawable/btn_selected_background"
                android:fontFamily="@font/poppins_medium"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="42dp"
                android:layout_marginEnd="42dp"
                android:layout_marginTop="40dp"
                />


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>