<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_color"
    tools:context=".activity.Welcome">

    <LinearLayout
        android:id="@+id/top"
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".45"
            android:orientation="vertical"
            android:gravity="bottom">

            <ImageView
                android:id="@+id/SplashScreenImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/splash_icon"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".55"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/life_task"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:gravity="center"
                android:fontFamily="@font/poppins_bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a_task"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_medium"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                />


            <TextView
                android:id="@+id/get_started"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:text="@string/get_started"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:gravity="center"
                android:background="@drawable/coloful_btn_background"
                android:fontFamily="@font/poppins_medium"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="42dp"
                android:layout_marginEnd="42dp"
                android:layout_marginTop="60dp"
                />


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>